effects block added, grid fixed

--- a/index.html
+++ b/index.html
@@ -66,23 +66,32 @@
       <div class="box box--shear">
         <div class="container">
           <div class="row">
-            <div class="col-sm-6 col-md-12">
+            <div class="col-sm-6 col-md-12 pull-sm">
               <div class="box__container">
                 <div class="features">
                   <div class="col-md-4">
                     <div class="features__item">
+                      <div class="features__img">
+                        <img src="img/iphone-screen-3-1@1x.png" height="302" width="292" alt="">
+                      </div>
                       <strong class="features__caption">Поднимает настроение</strong>
                       <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
                     </div>
                   </div>
                   <div class="col-md-4">
                     <div class="features__item">
+                      <div class="features__img">
+                        <img src="img/iphone-screen-3-2@1x.png" height="302" width="292" alt="">
+                      </div>
                       <strong class="features__caption">Меняет мир вокруг</strong>
                       <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
                     </div>
                   </div>
                   <div class="col-md-4">
                     <div class="features__item">
+                      <div class="features__img">
+                        <img src="img/iphone-screen-3-3@1x.png" height="302" width="292" alt="">
+                      </div>
                       <strong class="features__caption">Заводит новых друзей</strong>
                       <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
                     </div>
@@ -93,6 +102,7 @@
             <div class="col-sm-6 visible-xs visible-sm">
               <div class="features__mob-img">
                 <img src="img/mob.png">
+                <!-- <img src="img/iphone-screen-2-3@1x.png"> -->
               </div>
             </div>
           </div>
@@ -109,8 +119,8 @@
             </div>
             <div class="col-sm-6 hidden-xs">
               <div class="effect__text">
-                <h2 class="effect__caption">Эффект на 24 часа!</h2>
-                <p>Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+                <h2 class="effect__caption">Эффект на&nbsp;24&nbsp;часа!</h2>
+                <p>Британские ученые провели исследования и&nbsp;доказали, что положительный эффект от&nbsp;использования приложения длится целые&nbsp;сутки!</p>
                 <a href="#">Узнать больше об исследовании</a>
               </div>
             </div>
@@ -127,19 +137,7 @@
                   <cite class="reviews__author">Николай Петров</cite>
                   <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
                 </blockquote>
-              </div> 
-<!--                   <div>
-                <blockquote class="reviews">
-                  <cite class="reviews__author">Николай Петров</cite>
-                  <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-                </blockquote>
               </div>
-              <div>
-                <blockquote class="reviews">
-                  <cite class="reviews__author">Николай Петров</cite>
-                  <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-                </blockquote>
-              </div>  -->
              </div>
             <div class="slider__pagination">
               <i class="active"></i>
@@ -152,126 +150,103 @@
 
       <div class="box box--shear">
         <div class="box__container">
-          <!-- <div class="slider slider--price visible-xs">
-            <div class="slide active">
-              <table class="price-table">
-                <tr>
-                  <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
-                </tr>
-                <tr>
-                  <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
-                </tr>
-                <tr>
-                  <td>Смайлики <span class="check"><i class="checked">есть</i></span></td>
-                </tr>
-                <tr>
-                  <td>Комментарии <span class="check"><i>нет</i></span></td>
-                </tr>
-              </table>
-            </div>
-          </div>
-          <div class="slider__pagination visible-xs">
-            <i></i>
-            <i class="active"></i>
-            <i></i>
-          </div>
-        </div>
- -->
-      <div class="slider visible-xs">
-        <input type="radio" id="btn-1" name="toggle" checked>
-        <input type="radio" id="btn-2" name="toggle">
-        <input type="radio" id="btn-3" name="toggle">
-        <div class="slider-controls">
-          <label for="btn-1"></label>
-          <label for="btn-2"></label>
-          <label for="btn-3"></label>
-        </div>
-        <div class="slider-inner">
-          <div class="slider-slides">
-            <div class="slider__slide slide--first">
-              <table class="price-table">
-                <tr>
-                  <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
-                </tr>
-                <tr>
-                  <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
-                </tr>
-                <tr>
-                  <td>Смайлики <span class="check"><i class="checked">есть</i></span></td>
-                </tr>
-                <tr>
-                  <td>Комментарии <span class="check"><i>нет</i></span></td>
-                </tr>
-              </table>
-            </div>
-            <div class="slider__slide slide--second">
-              <table class="price-table">
-                <tr>
-                  <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
-                </tr>
-                <tr>
-                  <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
-                </tr>
-                <tr>
-                  <td>Смайлики <span class="check"><i class="checked">есть</i></span></td>
-                </tr>
-                <tr>
-                  <td>Комментарии <span class="check"><i>нет</i></span></td>
-                </tr>
-              </table>
-            </div>
-            <div class="slider__slide slide--third">
-              <table class="price-table">
-                <tr>
-                  <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
-                </tr>
-                <tr>
-                  <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
-                </tr>
-                <tr>
-                  <td>Смайлики <span class="check"><i class="checked">есть</i></span></td>
-                </tr>
-                <tr>
-                  <td>Комментарии <span class="check"><i>нет</i></span></td>
-                </tr>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div>
 
-        <div class="container">
-          <div class="hidden-xs">
-            <table class="price-table price-table--big">
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-              <tr>
-                <th class="price-table__caption--null"></th>
-                <th class="price-table__caption">База<span>1,99 USD</span></th>
-                <th class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
-                <th class="price-table__caption">Анлим <span>9,99 USD</span></th>
-              </tr>
-              <tr>
-                <td>Розовый фильтр</td>
-                <td><span class="check"><i class="checked">есть</i></span></td>
-                <td><span class="check"><i class="checked">есть</i></span></td>
-                <td><span class="check"><i class="checked">есть</i></span></td>
-              </tr>
-              <tr>
-                <td>Смайлики</td>
-                <td><span class="check"><i class="checked">есть</i></span></td>
-                <td><span class="check"><i>нет</i></span></td>
-                <td><span class="check"><i>нет</i></span></td>
-              </tr>
-              <tr>
-                <td>Комментарии</td>
-                <td><span class="check"><i class="checked">есть</i></span></td>
-                <td><span class="check"><i>нет</i></span></td>
-                <td><span class="check"><i>нет</i></span></td>
-              </tr>
-            </table>
+          <div class="slider visible-xs">
+            <input type="radio" id="btn-1" name="toggle" checked>
+            <input type="radio" id="btn-2" name="toggle">
+            <input type="radio" id="btn-3" name="toggle">
+            <div class="slider-controls">
+              <label for="btn-1"></label>
+              <label for="btn-2"></label>
+              <label for="btn-3"></label>
+            </div>
+            <div class="slider-inner">
+              <div class="slider-slides">
+                <div class="slider__slide slide--first">
+                  <table class="price-table">
+                    <tr>
+                      <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
+                    </tr>
+                    <tr>
+                      <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
+                    </tr>
+                    <tr>
+                      <td>Смайлики <span class="check"><i class="checked">есть</i></span></td>
+                    </tr>
+                    <tr>
+                      <td>Комментарии <span class="check"><i>нет</i></span></td>
+                    </tr>
+                  </table>
+                </div>
+                <div class="slider__slide slide--second">
+                  <table class="price-table">
+                    <tr>
+                      <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
+                    </tr>
+                    <tr>
+                      <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
+                    </tr>
+                    <tr>
+                      <td>Смайлики <span class="check"><i class="checked">есть</i></span></td>
+                    </tr>
+                    <tr>
+                      <td>Комментарии <span class="check"><i>нет</i></span></td>
+                    </tr>
+                  </table>
+                </div>
+                <div class="slider__slide slide--third">
+                  <table class="price-table">
+                    <tr>
+                      <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
+                    </tr>
+                    <tr>
+                      <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
+                    </tr>
+                    <tr>
+                      <td>Смайлики <span class="check"><i class="checked">есть</i></span></td>
+                    </tr>
+                    <tr>
+                      <td>Комментарии <span class="check"><i>нет</i></span></td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="hidden-xs">
+              <table class="price-table price-table--big">
+                <col width="25%">
+                <col width="25%">
+                <col width="25%">
+                <col width="25%">
+                <tr>
+                  <th class="price-table__caption--null"></th>
+                  <th class="price-table__caption">База<span>1,99 USD</span></th>
+                  <th class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
+                  <th class="price-table__caption">Анлим <span>9,99 USD</span></th>
+                </tr>
+                <tr>
+                  <td>Розовый фильтр</td>
+                  <td><span class="check"><i class="checked">есть</i></span></td>
+                  <td><span class="check"><i class="checked">есть</i></span></td>
+                  <td><span class="check"><i class="checked">есть</i></span></td>
+                </tr>
+                <tr>
+                  <td>Смайлики</td>
+                  <td><span class="check"><i class="checked">есть</i></span></td>
+                  <td><span class="check"><i>нет</i></span></td>
+                  <td><span class="check"><i>нет</i></span></td>
+                </tr>
+                <tr>
+                  <td>Комментарии</td>
+                  <td><span class="check"><i class="checked">есть</i></span></td>
+                  <td><span class="check"><i>нет</i></span></td>
+                  <td><span class="check"><i>нет</i></span></td>
+                </tr>
+              </table>
+            </div>
           </div>
         </div>
       </div>
