--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </main>
 
     <footer class="page-footer">
-      <div class="box box--angle">
+      <div class="box">
         <div class="container">
           <div class="row">
             <div class="box__container">
@@ -281,6 +281,13 @@
             </div>
           </div>
         </div>
+        <svg class="box--angle" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
+          <polygon points="
+            50,50
+            100,0 
+            0,0 
+            0,0">
+        </svg>
       </div>
 
       <div class="contacts__map"></div>
