--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <title>HTML Academy: Pink</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
@@ -101,8 +101,14 @@
             </div>
             <div class="col-sm-6 visible-xs visible-sm">
               <div class="features__mob-img">
-                <img src="img/mob.png">
-                <!-- <img src="img/iphone-screen-2-3@1x.png"> -->
+                <!-- <peacture> -->
+                  <img 
+                    src="img/mob.png"
+                    srcset="img/mob.png 200w,
+                      img/iphone-screen-2-3@1x.png 700w,
+                      img/iphone-screen-2-3@2x.png 1200w"
+                    sizes="(min-width: 600px) 50vw : 100vw">
+                <!-- </peacture> -->
               </div>
             </div>
           </div>
