--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <title>HTML Academy: Pink</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="svg/css/grunticon-icons.data.svg.css">
+  <link rel="stylesheet" href="svg/css/grunticon-icons.data.png.css">
+  <link rel="stylesheet" href="svg/css/grunticon-icons.fallback.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/grunticon.loader.js"></script>
 </head>
@@ -16,7 +19,6 @@
         <div class="col-md-4">
           <h1 class="logo">
             <a href="index.html">
-    <!--    <img src="img/logo.svg" height="24" width="74" alt="Pink"> -->
             <img 
               src="img/pink-logo-mob.png" height="24" width="74" alt="Pink">
 <!--               srcset="img/pink-logo-mob.png 1x,
@@ -49,7 +51,8 @@
           <a class="btn btn--fixed" href="javascript:void(0);">Скачать приложение</a>
           <ul class="intro-desc__apps-list">
             <li><img src="img/icon--apple.png" alt="Apple"></li>
-            <li><img src="img/icon--android.png" alt="Android"></li>
+            <!-- <li><img src="img/icon--android.png" alt="Android"></li> -->
+            <li><i class="icon-android-logo" data-grunticon-embed></i></li>
             <li><img src="img/icon--windows.png" alt="Windows"></li>
           </ul>
           <p>Доступно для iPhone, iPad, Android, <br>Windows phone, Mac OS, Windows 8</p>
