--- a/svg/preview.html
+++ b/svg/preview.html
@@ -26,39 +26,55 @@
 		<h1>PREVIEW - you can change this in the previewTemplate option</h1>
 		
 			
-			<pre><code>icon-android-logo:</code></pre><div id="icon-android-logo" style="width: 42.084px; height: 47.041px;" ></div><hr/>
+			<pre><code>.icon-android-logo:</code></pre><div class="icon-android-logo" style="width: 42.084px; height: 47.041px;" ></div><hr/>
 			
 		
 			
-			<pre><code>icon-apple-logo:</code></pre><div id="icon-apple-logo" style="width: 46.21px; height: 56.753px;" ></div><hr/>
+			<pre><code>.icon-apple-logo:</code></pre><div class="icon-apple-logo" style="width: 46.21px; height: 56.753px;" ></div><hr/>
 			
 		
 			
-			<pre><code>icon-facebook:</code></pre><div id="icon-facebook" style="width: 8.673px; height: 18.944px;" ></div><hr/>
+			<pre><code>.icon-facebook:</code></pre><div class="icon-facebook" style="width: 8.673px; height: 18.944px;" ></div><hr/>
 			
 		
 			
-			<pre><code>icon-glukhanko:</code></pre><div id="icon-glukhanko" style="width: 25.988px; height: 29.922px;" ></div><hr/>
+			<pre><code>.icon-glukhanko:</code></pre><div class="icon-glukhanko" style="width: 25.988px; height: 29.922px;" ></div><hr/>
 			
 		
 			
-			<pre><code>icon-htmlacademy:</code></pre><div id="icon-htmlacademy" style="width: 26.096px; height: 33.803px;" ></div><hr/>
+			<pre><code>.icon-htmlacademy:</code></pre><div class="icon-htmlacademy" style="width: 26.096px; height: 33.803px;" ></div><hr/>
 			
 		
 			
-			<pre><code>icon-logo-mob:</code></pre><div id="icon-logo-mob" style="width: 74.318px; height: 23.041px;" ></div><hr/>
+			<pre><code>.icon-logo-mob:</code></pre><div class="icon-logo-mob" style="width: 74.318px; height: 23.041px;" ></div><hr/>
 			
 		
 			
-			<pre><code>icon-smiley-1:</code></pre><div id="icon-smiley-1" style="width: 77.082px; height: 77.082px;" ></div><hr/>
+			<pre><code>.icon-microsoft-logo:</code></pre><div class="icon-microsoft-logo" style="width: 43.922px; height: 41.992px;" ></div><hr/>
 			
 		
 			
-			<pre><code>icon-timer-2:</code></pre><div id="icon-timer-2" style="width: 260.644px; height: 301.835px;" ></div><hr/>
+			<pre><code>.icon-quotes:</code></pre><div class="icon-quotes" style="width: 78.673px; height: 63.788px;" ></div><hr/>
 			
 		
 			
-			<pre><code>icon-timer-3:</code></pre><div id="icon-timer-3" style="width: 298.001px; height: 345.097px;" ></div><hr/>
+			<pre><code>.icon-smiley-1:</code></pre><div class="icon-smiley-1" style="width: 77.082px; height: 77.082px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-timer-2:</code></pre><div class="icon-timer-2" style="width: 260.644px; height: 301.835px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-timer-3:</code></pre><div class="icon-timer-3" style="width: 298.001px; height: 345.097px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-twitter:</code></pre><div class="icon-twitter" style="width: 17.5px; height: 14.663px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-youtube:</code></pre><div class="icon-youtube" style="width: 14.64px; height: 13.96px;" ></div><hr/>
 			
 		
 </body>
