--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>HTML Academy: Pink</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="svg/css/grunticon-icons.data.svg.css">
-  <link rel="stylesheet" href="svg/css/grunticon-icons.data.png.css">
-  <link rel="stylesheet" href="svg/css/grunticon-icons.fallback.css">
+<!--   <link rel="stylesheet" href="svg/css/grunticon-icons.data.png.css"> -->
+<!--   <link rel="stylesheet" href="svg/css/grunticon-icons.fallback.css"> -->
   <link rel="stylesheet" href="css/style.css">
   <script src="js/grunticon.loader.js"></script>
 </head>
@@ -20,11 +20,11 @@
           <h1 class="logo">
             <a href="index.html">
             <img 
-              src="img/pink-logo-mob.png" height="24" width="74" alt="Pink">
-<!--               srcset="img/pink-logo-mob.png 1x,
+              src="img/pink-logo-mob.png" alt="Pink"
+              srcset="img/pink-logo-mob.png 1x,
                 img/logo-header-3@1x.png 700w,
-                img/logo-header-3@2x.png 1200w"> 
-              sizes="(min-width: 600px) 50vw : 100vw"> -->
+                img/logo-header-3@2x.png 1200w"
+              sizes="(min-width: 600px) 50vw : 100vw">
             </a>
           </h1>
           <a class="nav-toggle  js-nav-toggle" title="Меню"><span>Меню</span></a>
@@ -50,10 +50,9 @@
         <div class="intro-desc__container">
           <a class="btn btn--fixed" href="javascript:void(0);">Скачать приложение</a>
           <ul class="intro-desc__apps-list">
-            <li><img src="img/icon--apple.png" alt="Apple"></li>
-            <!-- <li><img src="img/icon--android.png" alt="Android"></li> -->
+            <li><i class="icon-apple-logo" data-grunticon-embed></i></li>
             <li><i class="icon-android-logo" data-grunticon-embed></i></li>
-            <li><img src="img/icon--windows.png" alt="Windows"></li>
+            <li><i class="icon-microsoft-logo" data-grunticon-embed></i></li>
           </ul>
           <p>Доступно для iPhone, iPad, Android, <br>Windows phone, Mac OS, Windows 8</p>
         </div>
@@ -121,16 +120,16 @@
         </div>
       </div>
 
-      <div class="effect">
+      <div class="effect hidden-xs">
         <div class="container">
           <div class="row">
-            <div class="col-sm-6 hidden-xs">
+            <div class="col-sm-6">
               <div class="effect__timer">
                 <svg version="1" xmlns="http://www.w3.org/2000/svg" width="260.644" height="301.835" viewBox="0 0 260.644 301.835"><path d="M256.317 138.176c-4.76-18.067-13.292-34.604-24.73-48.707l7.495-7.49c5.312-5.315 5.312-13.932 0-19.242-2.916-2.92-6.805-4.072-10.61-3.79-3.143.224-6.248 1.397-8.628 3.79l-7.49 7.487c-7.943-6.433-16.687-11.854-26.006-16.292-8.412-3.985-17.275-7.167-26.535-9.332-.078-.013-.18-.013-.27-.03-4.014-.934-8.053-1.737-12.214-2.287v-8.256h6.016c9.392 0 17.01-7.618 17.01-17.032 0-9.38-7.618-16.994-17.01-16.994H106.26c-1.5 0-2.936.254-4.34.61 0 0-.007.025-.016.025-7.282 1.926-12.65 8.497-12.65 16.36 0 9.413 7.618 17.03 17.006 17.03h7.052v8.257c-43.81 5.715-80.66 33.232-99.584 71.238-3.778 7.572-6.903 15.52-9.144 23.823C1.614 148.238 0 159.67 0 171.507c0 56.342 35.818 104.22 85.912 122.402 13.882 5.015 28.796 7.925 44.408 7.925 6.503 0 12.89-.49 19.112-1.43.667-.083 1.3-.28 1.97-.393 18.337-3.002 35.447-9.77 50.375-19.585 20.617-13.554 37.065-32.768 47.302-55.442 7.366-16.356 11.563-34.396 11.563-53.48 0-11.516-1.508-22.682-4.326-33.33zM198.41 239.602c-12.416 12.41-27.623 20.884-44.205 25.133-5.686 1.422-11.595 2.194-17.552 2.594-.85.052-1.645.2-2.488.21-1.29.063-2.55.26-3.845.26-3.537 0-7.053-.227-10.525-.602-21.743-2.358-41.883-11.903-57.572-27.596-18.188-18.187-28.214-42.38-28.214-68.095 0-2.036.173-4.02.29-6.032 1.453-23.453 11.166-45.325 27.923-62.07 2.084-2.076 4.265-4.022 6.49-5.893l.015-.013C86 83.085 107.543 75.195 130.32 75.195c4.162 0 8.257.285 12.29.812 12.65 1.638 24.706 5.75 35.636 12.034.12.072.25.162.358.244 7.128 4.15 13.816 9.138 19.806 15.116 1.407 1.417 2.684 2.916 3.98 4.4.046.046.09.104.145.16 2.646 3.015 5.01 6.248 7.252 9.523 1.426 2.136 2.855 4.28 4.106 6.5 7.736 13.512 12.114 28.732 12.582 44.667.034.952.134 1.878.134 2.853-.002 25.717-10.01 49.91-28.2 68.097z"/></svg>
                 <span>24</span>
               </div>
             </div>
-            <div class="col-sm-6 hidden-xs">
+            <div class="col-sm-6">
               <div class="effect__text">
                 <h2 class="effect__caption">Эффект на&nbsp;24&nbsp;часа!</h2>
                 <p>Британские ученые провели исследования и&nbsp;доказали, что положительный эффект от&nbsp;использования приложения длится целые&nbsp;сутки!</p>
@@ -148,7 +147,7 @@
               <div class="active"> 
                 <blockquote class="reviews">
                   <cite class="reviews__author">Николай Петров</cite>
-                  <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                  <p class="reviews__text">«Это приложение перевернуло мой&nbsp;мир и&nbsp;позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в&nbsp;комментариях к&nbsp;выложенной фотографии!»</p>
                 </blockquote>
               </div>
              </div>
@@ -164,7 +163,7 @@
       <div class="box box--shear">
         <div class="box__container">
 
-          <div class="slider visible-xs">
+          <div class="slider slider--tables visible-xs">
             <input type="radio" id="btn-1" name="toggle" checked>
             <input type="radio" id="btn-2" name="toggle">
             <input type="radio" id="btn-3" name="toggle">
@@ -174,11 +173,11 @@
               <label for="btn-3"></label>
             </div>
             <div class="slider-inner">
-              <div class="slider-slides">
+              <div class="slider--slides">
                 <div class="slider__slide slide--first">
                   <table class="price-table">
                     <tr>
-                      <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
+                      <th colspan="2" class="price-table__caption">Стандарт <span>3,99 USD</span></th>
                     </tr>
                     <tr>
                       <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
@@ -210,7 +209,7 @@
                 <div class="slider__slide slide--third">
                   <table class="price-table">
                     <tr>
-                      <th colspan="2" class="price-table__caption price-table__caption--flag">Стандарт <span>3,99 USD</span></th>
+                      <th colspan="2" class="price-table__caption">Стандарт <span>3,99 USD</span></th>
                     </tr>
                     <tr>
                       <td>Розовый фильтр <span class="check"><i class="checked">есть</i></span></td>
