main-menu + menu-js

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </h1>
           <a class="nav-toggle  js-nav-toggle" title="Меню"><span>Меню</span></a>
         </div>
-        <div class="page-header__nav-wrap">
+        <div class="col-md-8 page-header__nav-wrap">
           <nav class="main-nav">
             <ul>
               <li class="active"><a href="#">Информация</a></li>
@@ -268,7 +268,7 @@
       <div class="box">
         <div class="container">
           <div class="row">
-            <div class="box__container">
+            <div class="page-footer__container">
               <div class="contacts">
                 <h2 class="contacts__caption">Остались вопросы? <br>Свяжитесь с нами!</h2>
                 <div class="col-sm-6 col-md-4">
@@ -336,7 +336,7 @@
     </footer>
 
   </div>
-  <!-- <script src="js/script.js"></script> -->
+  <script src="js/functions.js"></script>
         <!-- PixLayout -->
   <script src="assets/jquery.js"></script>
   <script src="assets/jquery.pixlayout.js"></script>
