main-menu hover effects

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
           <nav class="main-nav">
             <ul>
               <li class="active"><a href="#">Информация</a></li>
-              <li><a href="javascript:void(0);">Возможности</a></li>
-              <li><a href="javascript:void(0);">Отзывы</a></li>
-              <li><a href="javascript:void(0);">Стоимость</a></li>
+              <li><a href="#">Возможности</a></li>
+              <li><a href="#">Отзывы</a></li>
+              <li><a href="#">Стоимость</a></li>
             </ul>
           </nav>
         </div>
@@ -48,7 +48,7 @@
       <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
       <div class="intro-desc">
         <div class="intro-desc__container">
-          <a class="btn btn--fixed" href="javascript:void(0);">Скачать приложение</a>
+          <a class="btn btn--fixed" href="#">Скачать приложение</a>
           <ul class="intro-desc__apps-list">
             <li><i class="icon-apple-logo" data-grunticon-embed></i></li>
             <li><i class="icon-android-logo" data-grunticon-embed></i></li>
