--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
             </div>
             <div class="col-sm-4 col-md-6">
               <div class="social">
-                <a class="social__btn social__btn--tw" href="javascript:void(0)">Twitter</a>
-                <a class="social__btn social__btn--fb" href="javascript:void(0)">Facebook</a>
-                <a class="social__btn social__btn--youtube" href="javascript:void(0)">Youtube</a>
+                <a class="social__btn social__btn--tw" href="#"><i class="icon-twitter" data-grunticon-embed>Twitter</i></a>
+                <a class="social__btn social__btn--fb" href="#"><i class="icon-facebook" data-grunticon-embed>Facebook</i></a>
+                <a class="social__btn social__btn--youtube" href="#"><i class="icon-youtube" data-grunticon-embed>Youtube</i></a>
               </div>
             </div>
             <div class="col-sm-4 col-md-3">
