mob menu button

--- a/svg/preview.html
+++ b/svg/preview.html
@@ -38,6 +38,14 @@
 			
 		
 			
+			<pre><code>.icon-glukhanko-down:</code></pre><div class="icon-glukhanko-down" style="width: 25.988px; height: 29.922px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-glukhanko-hvr:</code></pre><div class="icon-glukhanko-hvr" style="width: 25.988px; height: 29.922px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-glukhanko:</code></pre><div class="icon-glukhanko" style="width: 25.988px; height: 29.922px;" ></div><hr/>
 			
 		
@@ -63,10 +71,6 @@
 		
 			
 			<pre><code>.icon-timer-2:</code></pre><div class="icon-timer-2" style="width: 260.644px; height: 301.835px;" ></div><hr/>
-			
-		
-			
-			<pre><code>.icon-timer-3:</code></pre><div class="icon-timer-3" style="width: 298.001px; height: 345.097px;" ></div><hr/>
 			
 		
 			
