svg added, footer socials + copyright

--- a/svg/preview.html
+++ b/svg/preview.html
@@ -38,6 +38,14 @@
 			
 		
 			
+			<pre><code>.icon-glasses-hvr:</code></pre><div class="icon-glasses-hvr" style="width: 59px; height: 40px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-glasses:</code></pre><div class="icon-glasses" style="width: 59px; height: 40px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-glukhanko-down:</code></pre><div class="icon-glukhanko-down" style="width: 25.988px; height: 29.922px;" ></div><hr/>
 			
 		
@@ -47,6 +55,14 @@
 		
 			
 			<pre><code>.icon-glukhanko:</code></pre><div class="icon-glukhanko" style="width: 25.988px; height: 29.922px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-htmlacademy-down:</code></pre><div class="icon-htmlacademy-down" style="width: 26.096px; height: 33.803px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-htmlacademy-hvr:</code></pre><div class="icon-htmlacademy-hvr" style="width: 26.096px; height: 33.803px;" ></div><hr/>
 			
 		
 			
