--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>HTML Academy: Pink</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="svg/css/grunticon-icons.data.svg.css">
-<!--   <link rel="stylesheet" href="svg/css/grunticon-icons.data.png.css"> -->
-<!--   <link rel="stylesheet" href="svg/css/grunticon-icons.fallback.css"> -->
+  <!-- <link rel="stylesheet" href="svg/css/grunticon-icons.data.png.css"> -->
+  <!-- <link rel="stylesheet" href="svg/css/grunticon-icons.fallback.css"> -->
   <link rel="stylesheet" href="css/style.css">
   <script src="js/grunticon.loader.js"></script>
 </head>
@@ -19,6 +19,7 @@
         <div class="col-md-4">
           <h1 class="logo">
             <a href="index.html">
+            <i class="icon-glasses" data-grunticon-embed></i>
             <img 
               src="img/pink-logo-mob.png" alt="Pink"
               srcset="img/pink-logo-mob.png 1x,
@@ -307,9 +308,10 @@
       <div class="socials hidden-xs">
         <div class="container">
           <div class="row">
-            <div class="col-sm-4 col-md-3">
+            <div class="col-sm-4">
               <div class="logo">
                 <!-- <img src="img/logo-footer@1x.png" height="40" width="146" alt="Pink"> -->
+                <!-- <i class="icon-glasses-hvr" data-grunticon-embed></i> -->
                 <img 
                   src="img/logo-footer@1x.png" height="40" width="146"
                   srcset="img/logo-footer@1x.png 320w,
@@ -318,16 +320,19 @@
                   sizes="(min-width: 600px) 50vw : 100vw">
               </div>
             </div>
-            <div class="col-sm-4 col-md-6">
+            <div class="col-sm-4">
               <div class="social">
                 <a class="social__btn social__btn--tw" href="#"><i class="icon-twitter" data-grunticon-embed>Twitter</i></a>
                 <a class="social__btn social__btn--fb" href="#"><i class="icon-facebook" data-grunticon-embed>Facebook</i></a>
                 <a class="social__btn social__btn--youtube" href="#"><i class="icon-youtube" data-grunticon-embed>Youtube</i></a>
               </div>
             </div>
-            <div class="col-sm-4 col-md-3">
-              <div class="socials__copyright">
-                <span>Website by</span><a class="copyright-glukhanko block--copyright" href="http://glukhanko.ru">Glukhanko</a> <span>for</span><a class="copyright-academy block--copyright" href="http://htmlacademy.ru">Html Academy</a>
+            <div class="col-sm-4">
+              <div class="copyright">
+                <span>Website by</span>
+                <a class="copyright__glukhanko" href="http://glukhanko.ru"><i class="icon-glukhanko" data-grunticon-embed>Glukhanko</i></a> 
+                <span>for</span>
+                <a class="copyright__academy" href="http://htmlacademy.ru"><i class="icon-htmlacademy" data-grunticon-embed>Html Academy</i></a>
               </div>
             </div>
           </div>
