--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
       <div class="row">
         <div class="col-md-4">
           <h1 class="logo">
-            <a href="index.html">
+            <a href="index.html">Pink
             <i class="icon-glasses" data-grunticon-embed></i>
-            <img 
+            <i class="icon-logo-mob" data-grunticon-embed></i>
+            <i class="icon-pink-desktop" data-grunticon-embed></i>
+<!--             <img 
               src="img/pink-logo-mob.png" alt="Pink"
               srcset="img/pink-logo-mob.png 1x,
-                img/logo-header-3@1x.png 700w,
-                img/logo-header-3@2x.png 1200w"
-              sizes="(min-width: 600px) 50vw : 100vw">
+                img/logo-mob.svg 2x,
+                svgmin/pink-desktop.svg 1200w,
+                 img/logo-header-3@2x.png 1200w"
+              sizes="(min-width: 600px) 50vw : 100vw"> -->
             </a>
           </h1>
           <a class="nav-toggle  js-nav-toggle" title="Меню"><span>Меню</span></a>
@@ -64,7 +67,7 @@
     <main class="page-main">
       <div class="box">
         <div class="container">
-          <div class="box__container">
+          <div class="box__container box__container--captions">
             <div class="page-caption">Устали от серости мегаполиса?</div>
             <div class="page-caption">Нам есть, что вам предложить!</div>
           </div>
@@ -74,10 +77,10 @@
       <div class="box box--shear">
         <div class="container">
           <div class="row">
-            <div class="col-sm-6 col-md-12 pull-sm">
-              <div class="box__container">
+            <div class="col-sm-6 col-md-12 col-md--pl0 pull-sm">
+              <div class="box__container box__container--features">
                 <div class="features">
-                  <div class="col-md-4">
+                  <div class="col-md-4 col-md--pl0">
                     <div class="features__item">
                       <div class="features__img">
                         <img src="img/iphone-screen-3-1@1x.png" height="302" width="292" alt="">
@@ -86,7 +89,7 @@
                       <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
                     </div>
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-4 col-md--pl0">
                     <div class="features__item">
                       <div class="features__img">
                         <img src="img/iphone-screen-3-2@1x.png" height="302" width="292" alt="">
@@ -95,7 +98,7 @@
                       <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
                     </div>
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-4 col-md--pl0">
                     <div class="features__item">
                       <div class="features__img">
                         <img src="img/iphone-screen-3-3@1x.png" height="302" width="292" alt="">
@@ -107,7 +110,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 visible-xs visible-sm">
+            <div class="col-sm-6 visible-xs visible-sm col-md--pl0">
               <div class="features__mob-img">
                 <img 
                   src="img/mob.png"
@@ -130,7 +133,7 @@
                 <span>24</span>
               </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-md--pl0">
               <div class="effect__text">
                 <h2 class="effect__caption">Эффект на&nbsp;24&nbsp;часа!</h2>
                 <p>Британские ученые провели исследования и&nbsp;доказали, что положительный эффект от&nbsp;использования приложения длится целые&nbsp;сутки!</p>
@@ -147,7 +150,8 @@
             <div class="slider slider--reviews">
               <div class="active"> 
                 <blockquote class="reviews">
-                  <cite class="reviews__author">Николай Петров</cite>
+                  <i class="icon-quotes" data-grunticon-embed></i>
+                  <cite class="reviews__author">Николай Петров <small>25 лет, водитель трамвая</small></cite>
                   <p class="reviews__text">«Это приложение перевернуло мой&nbsp;мир и&nbsp;позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в&nbsp;комментариях к&nbsp;выложенной фотографии!»</p>
                 </blockquote>
               </div>
