--- a/svg/preview.html
+++ b/svg/preview.html
@@ -74,7 +74,15 @@
 			
 		
 			
+			<pre><code>.icon-logo-tablet:</code></pre><div class="icon-logo-tablet" style="width: 59px; height: 40px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-microsoft-logo:</code></pre><div class="icon-microsoft-logo" style="width: 43.922px; height: 41.992px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-pink-desktop:</code></pre><div class="icon-pink-desktop" style="width: 146px; height: 40px;" ></div><hr/>
 			
 		
 			
