svg logos added

--- a/index.html
+++ b/index.html
@@ -19,16 +19,9 @@
         <div class="col-md-4">
           <h1 class="logo">
             <a href="index.html">Pink
-            <i class="icon-glasses" data-grunticon-embed></i>
-            <i class="icon-logo-mob" data-grunticon-embed></i>
-            <i class="icon-pink-desktop" data-grunticon-embed></i>
-<!--             <img 
-              src="img/pink-logo-mob.png" alt="Pink"
-              srcset="img/pink-logo-mob.png 1x,
-                img/logo-mob.svg 2x,
-                svgmin/pink-desktop.svg 1200w,
-                 img/logo-header-3@2x.png 1200w"
-              sizes="(min-width: 600px) 50vw : 100vw"> -->
+              <i class="icon-logotype-white-1" data-grunticon-embed></i>
+              <i class="icon-logotype-white-2" data-grunticon-embed></i>
+              <i class="icon-logotype-white-3" data-grunticon-embed></i>
             </a>
           </h1>
           <a class="nav-toggle  js-nav-toggle" title="Меню"><span>Меню</span></a>
@@ -314,14 +307,10 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="logo">
-                <!-- <img src="img/logo-footer@1x.png" height="40" width="146" alt="Pink"> -->
-                <!-- <i class="icon-glasses-hvr" data-grunticon-embed></i> -->
-                <img 
-                  src="img/logo-footer@1x.png" height="40" width="146"
-                  srcset="img/logo-footer@1x.png 320w,
-                    img/logo-footer-3@1x.png 700w,
-                    img/logo-footer-hvr@2x.png 1200w"
-                  sizes="(min-width: 600px) 50vw : 100vw">
+                <a href="index.html">Pink
+                  <i class="icon-logotype-blue-2" data-grunticon-embed></i>
+                  <i class="icon-logotype-blue-3" data-grunticon-embed></i>
+                </a>
               </div>
             </div>
             <div class="col-sm-4">
