--- a/svg/preview.html
+++ b/svg/preview.html
@@ -38,14 +38,6 @@
 			
 		
 			
-			<pre><code>.icon-glasses-hvr:</code></pre><div class="icon-glasses-hvr" style="width: 59px; height: 40px;" ></div><hr/>
-			
-		
-			
-			<pre><code>.icon-glasses:</code></pre><div class="icon-glasses" style="width: 59px; height: 40px;" ></div><hr/>
-			
-		
-			
 			<pre><code>.icon-glukhanko-down:</code></pre><div class="icon-glukhanko-down" style="width: 25.988px; height: 29.922px;" ></div><hr/>
 			
 		
@@ -74,15 +66,31 @@
 			
 		
 			
-			<pre><code>.icon-logo-tablet:</code></pre><div class="icon-logo-tablet" style="width: 59px; height: 40px;" ></div><hr/>
+			<pre><code>.icon-logotype-blue-2:</code></pre><div class="icon-logotype-blue-2" style="width: 146.3px; height: 40.375px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-logotype-blue-3:</code></pre><div class="icon-logotype-blue-3" style="width: 146.3px; height: 40.375px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-logotype-white-1:</code></pre><div class="icon-logotype-white-1" style="width: 74.426px; height: 22.859px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-logotype-white-2-hvr:</code></pre><div class="icon-logotype-white-2-hvr" style="width: 146.3px; height: 40.375px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-logotype-white-2:</code></pre><div class="icon-logotype-white-2" style="width: 146.3px; height: 40.375px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-logotype-white-3:</code></pre><div class="icon-logotype-white-3" style="width: 146.3px; height: 40.375px;" ></div><hr/>
 			
 		
 			
 			<pre><code>.icon-microsoft-logo:</code></pre><div class="icon-microsoft-logo" style="width: 43.922px; height: 41.992px;" ></div><hr/>
-			
-		
-			
-			<pre><code>.icon-pink-desktop:</code></pre><div class="icon-pink-desktop" style="width: 146px; height: 40px;" ></div><hr/>
 			
 		
 			
@@ -91,10 +99,6 @@
 		
 			
 			<pre><code>.icon-smiley-1:</code></pre><div class="icon-smiley-1" style="width: 77.082px; height: 77.082px;" ></div><hr/>
-			
-		
-			
-			<pre><code>.icon-timer-2:</code></pre><div class="icon-timer-2" style="width: 260.644px; height: 301.835px;" ></div><hr/>
 			
 		
 			
