--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
       </div>
 
-      <!-- <div class="box"> -->
+      <div class="box">
         <div class="container">
           <div class="slider-slick">
             <div>
@@ -165,7 +165,7 @@
             </div>
            </div>
         </div>
-      <!-- </div> -->
+      </div>
 
       <div class="box box--shear">
         <div class="box__container box__container--price">
