Intro block responsive background images

--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <title>HTML Academy: Pink</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="svg/css/grunticon-icons.data.png.css">
+  <link rel="stylesheet" href="svg/css/grunticon-icons.fallback.css">
   <link rel="stylesheet" href="svg/css/grunticon-icons.data.svg.css">
-  <!-- <link rel="stylesheet" href="svg/css/grunticon-icons.data.png.css"> -->
-  <!-- <link rel="stylesheet" href="svg/css/grunticon-icons.fallback.css"> -->
   <link rel="stylesheet" href="js/libs/slick/slick.css">
   <link rel="stylesheet" href="js/libs/slick/slick-theme.css">
   <link rel="stylesheet" href="css/style.css">
-<!--  <script src="js/grunticon.loader.js"></script> -->
 </head>
 <body>
 <div class="page-wrap">
-  <header class="page-header">
+  <header class="page-header js-header">
     <div class="page-header__container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-lg-3">
           <h1 class="logo">
             <a href="index.html">Pink
               <i class="icon-logotype-white-1" data-grunticon-embed></i>
@@ -28,7 +27,7 @@
           </h1>
           <a class="nav-toggle  js-nav-toggle" title="Меню"><span>Меню</span></a>
         </div>
-        <div class="col-md-8 page-header__nav-wrap">
+        <div class="col-md-8 col-lg-9 page-header__nav-wrap">
           <nav class="main-nav">
             <ul>
               <li class="active"><a href="#">Информация</a></li>
@@ -141,7 +140,7 @@
 
       <div class="box">
         <div class="container">
-          <div class="slider-slick">
+          <div class="js-slider slider-slick">
             <div>
               <blockquote class="reviews">
                 <i class="icon-quotes" data-grunticon-embed></i>
@@ -272,7 +271,7 @@
     </main>
 
     <footer class="page-footer">
-      <div class="box">
+      <div class="box box--footer">
         <div class="container">
           <div class="row">
             <div class="page-footer__container">
@@ -284,7 +283,7 @@
                     <dd><a href="tel:88001000900">8 (800) 1000 900</a></dd>
                   </dl>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4 pull-lg">
                   <dl class="contacts__list">
                     <dt>Пишите:</dt>
                     <dd><a href="mailto:hello@pinkapp.ru">hello@pinkapp.ru</a></dd>
