--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,11 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="js/libs/slick/slick.css">
   <link rel="stylesheet" href="js/libs/slick/slick-theme.css">
-
-
   <script>
     document.documentElement.className =
        document.documentElement.className.replace("no-js","js");
   </script>
-
-
-  <script>
-    /*! grunt-grunticon Stylesheet Loader - v2.1.2 | https://github.com/filamentgroup/grunticon | (c) 2015 Scott Jehl, Filament Group, Inc. | MIT license. */
-
-(function(e){function n(n,t,o,a){"use strict";var i=e.document.createElement("link"),r=t||e.document.getElementsByTagName("script")[0],d=e.document.styleSheets;return i.rel="stylesheet",i.href=n,i.media="only x",a&&(i.onload=a),r.parentNode.insertBefore(i,r),i.onloadcssdefined=function(e){for(var t,o=0;d.length>o;o++)d[o].href&&d[o].href.indexOf(n)>-1&&(t=!0);t?e():setTimeout(function(){i.onloadcssdefined(e)})},i.onloadcssdefined(function(){i.media=o||"all"}),i}function t(e,n){e.onload=function(){e.onload=null,n&&n.call(e)},"isApplicationInstalled"in navigator&&"onloadcssdefined"in e&&e.onloadcssdefined(n)}var o=function(a,i){"use strict";if(a&&3===a.length){var r=e.Image,d=!(!document.createElementNS||!document.createElementNS("http://www.w3.org/2000/svg","svg").createSVGRect||!document.implementation.hasFeature("http://www.w3.org/TR/SVG11/feature#Image","1.1")||e.opera&&-1===navigator.userAgent.indexOf("Chrome")||-1!==navigator.userAgent.indexOf("Series40")),c=new r;c.onerror=function(){o.method="png",o.href=a[2],n(a[2])},c.onload=function(){var e=1===c.width&&1===c.height,r=a[e&&d?0:e?1:2];o.method=e&&d?"svg":e?"datapng":"png",o.href=r,t(n(r),i)},c.src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==",document.documentElement.className+=" grunticon"}};o.loadCSS=n,o.onloadCSS=t,e.grunticon=o})(this);(function(e,n){"use strict";var t=n.document,o="grunticon:",r=function(e){if(t.attachEvent?"complete"===t.readyState:"loading"!==t.readyState)e();else{var n=!1;t.addEventListener("readystatechange",function(){n||(n=!0,e())},!1)}},a=function(e){return n.document.querySelector('link[href$="'+e+'"]')},i=function(e){var n,t,r,a,i,c,d={};if(n=e.sheet,!n)return d;t=n.cssRules?n.cssRules:n.rules;for(var s=0;t.length>s;s++)r=t[s].cssText,a=o+t[s].selectorText,i=r.split(");")[0].match(/US\-ASCII\,([^"']+)/),i&&i[1]&&(c=decodeURIComponent(i[1]),d[a]=c);return d},c=function(e){var n,r,a;r="data-grunticon-embed";for(var i in e){a=i.slice(o.length);try{n=t.querySelectorAll(a+"["+r+"]")}catch(c){continue}if(n.length)for(var d=0;n.length>d;d++)n[d].innerHTML=e[i],n[d].style.backgroundImage="none",n[d].removeAttribute(r)}return n},d=function(n){"svg"===e.method&&r(function(){c(i(a(e.href))),"function"==typeof n&&n()})};e.embedIcons=c,e.getCSS=a,e.getIcons=i,e.ready=r,e.svgLoadedCallback=d,e.embedSVG=d})(grunticon,this);
-
-
-    grunticon(["css/grunticon-icons.data.svg.css", "css/grunticon-icons.data.png.css", "css/grunticon-icons.fallback.css"], grunticon.svgLoadedCallback);
-  </script>
+  <script type="text/javascript" src="js/grunticon.loader.js"></script>
   <noscript><link href="css/grunticon-icons.fallback.css" rel="stylesheet"></noscript>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -41,9 +30,9 @@
           </h1>
           <a class="nav-toggle  js-nav-toggle" title="Меню"><span>Меню</span></a>
         </div>
-        <div class="col-md-8 col-lg-9 page-header__nav-wrap">
-          <nav class="main-nav">
-            <ul>
+        <div class="col-md-8 col-lg-9">
+          <nav class="page-header__nav-wrap">
+            <ul class="main-nav">
               <li class="active"><a href="#">Информация</a></li>
               <li><a href="#">Возможности</a></li>
               <li><a href="#">Отзывы</a></li>
@@ -54,7 +43,6 @@
       </div>
     </div>
   </header>
-
   <div class="intro">
     <div class="intro__container">
       <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
@@ -71,7 +59,6 @@
       </div>
     </div>
   </div>
-  
     <main class="page-main">
       <div class="box">
         <div class="container">
@@ -81,7 +68,6 @@
           </div>
         </div>
       </div>
-
       <div class="box box--shear">
         <div class="container">
           <div class="row">
@@ -131,17 +117,16 @@
           </div>
         </div>
       </div>
-
       <div class="effect hidden-xs">
         <div class="container">
           <div class="row">
-            <div class="col-sm-6 col-md-5">
+            <div class="col-sm-6 col-md-5 col-lg-4">
               <div class="effect__timer">
                 <svg version="1" xmlns="http://www.w3.org/2000/svg" width="260.644" height="301.835" viewBox="0 0 260.644 301.835"><path d="M256.317 138.176c-4.76-18.067-13.292-34.604-24.73-48.707l7.495-7.49c5.312-5.315 5.312-13.932 0-19.242-2.916-2.92-6.805-4.072-10.61-3.79-3.143.224-6.248 1.397-8.628 3.79l-7.49 7.487c-7.943-6.433-16.687-11.854-26.006-16.292-8.412-3.985-17.275-7.167-26.535-9.332-.078-.013-.18-.013-.27-.03-4.014-.934-8.053-1.737-12.214-2.287v-8.256h6.016c9.392 0 17.01-7.618 17.01-17.032 0-9.38-7.618-16.994-17.01-16.994H106.26c-1.5 0-2.936.254-4.34.61 0 0-.007.025-.016.025-7.282 1.926-12.65 8.497-12.65 16.36 0 9.413 7.618 17.03 17.006 17.03h7.052v8.257c-43.81 5.715-80.66 33.232-99.584 71.238-3.778 7.572-6.903 15.52-9.144 23.823C1.614 148.238 0 159.67 0 171.507c0 56.342 35.818 104.22 85.912 122.402 13.882 5.015 28.796 7.925 44.408 7.925 6.503 0 12.89-.49 19.112-1.43.667-.083 1.3-.28 1.97-.393 18.337-3.002 35.447-9.77 50.375-19.585 20.617-13.554 37.065-32.768 47.302-55.442 7.366-16.356 11.563-34.396 11.563-53.48 0-11.516-1.508-22.682-4.326-33.33zM198.41 239.602c-12.416 12.41-27.623 20.884-44.205 25.133-5.686 1.422-11.595 2.194-17.552 2.594-.85.052-1.645.2-2.488.21-1.29.063-2.55.26-3.845.26-3.537 0-7.053-.227-10.525-.602-21.743-2.358-41.883-11.903-57.572-27.596-18.188-18.187-28.214-42.38-28.214-68.095 0-2.036.173-4.02.29-6.032 1.453-23.453 11.166-45.325 27.923-62.07 2.084-2.076 4.265-4.022 6.49-5.893l.015-.013C86 83.085 107.543 75.195 130.32 75.195c4.162 0 8.257.285 12.29.812 12.65 1.638 24.706 5.75 35.636 12.034.12.072.25.162.358.244 7.128 4.15 13.816 9.138 19.806 15.116 1.407 1.417 2.684 2.916 3.98 4.4.046.046.09.104.145.16 2.646 3.015 5.01 6.248 7.252 9.523 1.426 2.136 2.855 4.28 4.106 6.5 7.736 13.512 12.114 28.732 12.582 44.667.034.952.134 1.878.134 2.853-.002 25.717-10.01 49.91-28.2 68.097z"/></svg>
                 <span>24</span>
               </div>
             </div>
-            <div class="col-sm-6 col-md-7 col-md--pl0">
+            <div class="col-sm-6 col-md-7 col-lg-8 col-md--pl0">
               <div class="effect__text">
                 <h2 class="effect__caption">Эффект на&nbsp;24&nbsp;часа!</h2>
                 <p>Британские ученые провели исследования и&nbsp;доказали, что положительный эффект от&nbsp;использования приложения длится целые&nbsp;сутки!</p>
@@ -151,7 +136,6 @@
           </div>
         </div>
       </div>
-
       <div class="box">
         <div class="container">
           <div class="js-slider slider-slick">
@@ -179,10 +163,8 @@
            </div>
         </div>
       </div>
-
       <div class="box box--shear">
         <div class="box__container box__container--price">
-
           <div class="slider slider--tables visible-xs">
             <input type="radio" id="btn-1" name="toggle" checked>
             <input type="radio" id="btn-2" name="toggle">
@@ -245,7 +227,6 @@
               </div>
             </div>
           </div>
-
           <div class="container">
             <div class="hidden-xs">
               <table class="price-table price-table--big">
@@ -283,7 +264,6 @@
         </div>
       </div>
     </main>
-
     <footer class="page-footer">
       <div class="box box--footer">
         <div class="container">
@@ -321,14 +301,12 @@
             0,0">
         </svg>
       </div>
-
       <div class="contacts__map"></div>
-
       <div class="socials hidden-xs">
         <div class="container">
           <div class="row">
             <div class="col-sm-4">
-              <div class="logo">
+              <div class="logo logo--footer">
                 <a href="index.html">Pink
                   <i class="icon-logotype-blue-2" data-grunticon-embed></i>
                   <i class="icon-logotype-blue-3" data-grunticon-embed></i>
@@ -354,13 +332,10 @@
         </div>
       </div>
     </footer>
-
   </div>
-
   <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
   <script type="text/javascript" src="js/libs/slick/slick.min.js"></script>
   <script src="js/functions.js"></script>
-
         <!-- PixLayout  -->
   <script src="assets/jquery.pixlayout.js"></script>
   <script>
@@ -368,13 +343,13 @@
     //   $.pixlayout({
     //     src: "assets/mob-index.jpg",
     //     opacity: 0.4,
-    //     top: -2,
+    //     top: 0,
     //     center: true,
     //     clip: true,
     //     show: true,
     //   })
     // });
-  </script>
+  // </script>
   <!-- / PixLayout -->
 </body>
 </html>
