Captions don't break

--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
               <div class="effect__text">
                 <h2 class="effect__caption">Эффект на&nbsp;24&nbsp;часа!</h2>
                 <p>Британские ученые провели исследования и&nbsp;доказали, что положительный эффект от&nbsp;использования приложения длится целые&nbsp;сутки!</p>
-                <a href="#">Узнать больше об исследовании</a>
+                <a class="effect__link" href="#">Узнать больше об исследовании</a>
               </div>
             </div>
           </div>
