--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,13 @@
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <title>HTML Academy: Pink</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="js/libs/slick/slick.css">
-  <link rel="stylesheet" href="js/libs/slick/slick-theme.css">
+  <link rel="stylesheet" href="css/style.css">
   <script>
     document.documentElement.className =
        document.documentElement.className.replace("no-js","js");
   </script>
   <script type="text/javascript" src="js/grunticon.loader.js"></script>
   <noscript><link href="css/grunticon-icons.fallback.css" rel="stylesheet"></noscript>
-  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="page-wrap">
@@ -160,7 +158,7 @@
                 <p class="reviews__text">«Это приложение перевернуло мой&nbsp;мир и&nbsp;позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в&nbsp;комментариях к&nbsp;выложенной фотографии!»</p>
               </blockquote>
             </div>
-           </div>
+          </div>
         </div>
       </div>
       <div class="box box--shear">
@@ -293,6 +291,8 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="box">
         <svg class="box--angle" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
           <polygon points="
             50,50
@@ -300,8 +300,10 @@
             0,0 
             0,0">
         </svg>
+        <div class="map" id="js-map">
+          
+        </div>
       </div>
-      <div class="contacts__map"></div>
       <div class="socials hidden-xs">
         <div class="container">
           <div class="row">
@@ -333,6 +335,7 @@
       </div>
     </footer>
   </div>
+  <script src="http://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
   <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
   <script type="text/javascript" src="js/libs/slick/slick.min.js"></script>
   <script src="js/functions.js"></script>
