Effect block text

--- a/src/index.html
+++ b/src/index.html
@@ -340,7 +340,7 @@
   <script type="text/javascript" src="js/libs/slick/slick.min.js"></script>
   <script src="js/functions.js"></script>
         <!-- PixLayout  -->
-  <script src="assets/jquery.pixlayout.js"></script>
+  <script src="_assets/jquery.pixlayout.js"></script>
   <script>
     // $(function(){
     //   $.pixlayout({
@@ -352,7 +352,7 @@
     //     show: true,
     //   })
     // });
-  // </script>
+  </script>
   <!-- / PixLayout -->
 </body>
 </html>
