--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
     document.documentElement.className =
        document.documentElement.className.replace("no-js","js");
   </script>
-  <script type="text/javascript" src="js/grunticon.loader.js"></script>
   <noscript><link href="css/grunticon-icons.fallback.css" rel="stylesheet"></noscript>
 </head>
 <body>
@@ -104,7 +103,7 @@
             </div>
             <div class="col-sm-6 visible-xs visible-sm col-md--pl0">
               <div class="features__mob-img">
-                <img 
+                <img alt="" 
                   src="img/mob.png"
                   srcset="img/mob.png 200w,
                     img/iphone-screen-2-3@1x.png 700w,
@@ -292,7 +291,7 @@
           </div>
         </div>
       </div>
-      <div class="box">
+      <div class="box box--map">
         <svg class="box--angle" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
           <polygon points="
             50,50
@@ -335,12 +334,15 @@
       </div>
     </footer>
   </div>
-  <script src="http://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
-  <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
-  <script type="text/javascript" src="js/libs/slick/slick.min.js"></script>
-  <script src="js/functions.js"></script>
-        <!-- PixLayout  -->
+  <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/script.min.js"></script>
+<!--
   <script src="_assets/jquery.pixlayout.js"></script>
+  -->
+
+        <!-- PixLayout  -->
+
   <script>
     // $(function(){
     //   $.pixlayout({
